--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 h1 {
     text-align: center;
     margin: 150px 0 50px;
@@ -18,5 +23,22 @@ h1 {
 .card button {
     padding: 1em 2em;
     font-weight: bold;
+    width: 100%;
+}
+
+header, footer {
+    background-color: cornflowerblue;
+    padding: 1em 2em;
+    font-size: 1.3em;
+    text-align: center;
+}
+
+li {
+    list-style: none;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
     width: 100%;
 }
