ended youtube project with filter input search bar

--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     padding: 0;
 }
 
+nav > ul {
+    display: flex;
+    justify-content: center;
+    gap: 2em;
+}
 h1 {
     text-align: center;
     margin: 150px 0 50px;
